--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Emilio J Pascual</h1>
+        <h1 class='masthead-heading'>Emilio Pascual</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm an engineer who's learning how to code</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Panama</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Baking and riding my bike</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Environmental consultant</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Panama</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>to create my own applications</p>
     </section>
 
     <footer id="footer">
